--- a/Question_2.html
+++ b/Question_2.html
@@ -30,6 +30,6 @@
     </style>
   </head>
   <body>
-    <div class="centered-box">Zepto Apps</div>
+    <div class="centered-box">Md Fahim Alam</div>
   </body>
 </html>
